--- a/CV.html
+++ b/CV.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Curriculum Vitae of Vaid Singh, a Junior Frontend Developer with skills in HTML, CSS, and JavaScript.">
+    <meta name="keywords" content="Curriculum Vitae, Vaid Singh, Frontend Developer, HTML, CSS, JavaScript">
     <title>Curriculum Vita</title>
 </head>
 <body >
